# College_Management_System_Backend

./: .gitignore  College-Management-API-Updated.docx  FinalPRD2_content.txt  docx_content.txt  internshipkaprd2_content.txt  sample_students.csv  sample_teachers.csv
backend/: check_section_stats.py  check_user.py  check_users.py  create_admin.py  db_check.py  debug_assignments.py  debug_attendance_500.py  debug_creation.py  debug_data.py  diag_output.txt  diagnose_dashboard.py  diagnose_db.py  populate_attendance.py  populate_data.py  populate_log.txt  populate_student_data.py  pyproject.toml  requirements.txt  sample_import.csv  sample_teachers.csv  stats_output.txt  students_import.csv  teachers_import.csv  test_academic_api.py  test_branches_api.py  test_login.py  test_student_stats.py  verify_users.py
backend/alembic/: env.py
backend/alembic/versions/: b54e06eb7a02_add_announcements_table.py  c3c1b473b153_initial_migration.py
backend/app/: check_counts.py  check_cse_all_sems.py  check_cse_sections.py  check_db.py  check_ids.py  check_sem1.py  debug_sections.py  inspect_semesters.py  main.py  seed.py
backend/app/api/: router.py
backend/app/core/: config.py  database.py  dependencies.py  email.py  security.py
backend/app/models/: __init__.py  announcement.py  attendance.py  branch.py  exam.py  exam_marks.py  leave_application.py  notification.py  section.py  semester.py  settings.py  student_elective.py  subject.py  teacher_assignment.py  timetable.py  user.py
backend/app/repository/: announcement.py  attendance.py  (+14 more)
backend/scripts/: merge_sections.py
(+92 files in other folders)
